# pulith

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  justfile  rustc-ice-2026-02-02T09_54_05-26364.txt  rustfmt.toml  test_coverage_summary.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: benchmark.yml  ci.yml
.sisyphus/: boulder.json
.sisyphus/drafts/: pulith-fetch-redesign.md  pulith-fetch-refactor.md
.sisyphus/plans/: fix-benchmarks.md  fix-module-structure.md  pulith-fetch-benchmarks-update.md  pulith-fetch-fix.md  pulith-fetch-functional-groups.md  pulith-fetch-group-by-functionality.md  pulith-fetch-performance-detailed.md  pulith-fetch-redesign.md  (+1 more)
archive/pulith-install/: Cargo.toml
archive/pulith-install/src/: data.rs  error.rs  hooks.rs  lib.rs  pipeline.rs  transform.rs
crates/pulith/: Cargo.toml
crates/pulith-archive/: Cargo.toml  README.md
crates/pulith-archive/src/: detect.rs  entry.rs  error.rs  extract.rs  format.rs  lib.rs  options.rs  sanitize.rs  workspace.rs
crates/pulith-archive/src/data/: archive.rs  entry.rs  mod.rs  options.rs  report.rs
crates/pulith-archive/src/extract/: mod.rs  tar.rs  tar_codecs.rs  zip.rs
crates/pulith-archive/tests/: tests.rs
crates/pulith-backend/: Cargo.toml
crates/pulith-backend-example/: Cargo.toml  README.md
crates/pulith-backend-example/src/: lib.rs
crates/pulith-backend/src/: lib.rs  package.rs
crates/pulith-backend/src/backend/: mod.rs  winget.rs
crates/pulith-backend/src/backend/format/: mod.rs
crates/pulith-backend/src/backend/install/: mod.rs
crates/pulith-backend/src/backend/reg/: backend_reg.rs  mod.rs  tool_reg.rs
crates/pulith-core/: Cargo.toml
crates/pulith-core/src/: client.rs  fs.rs  install.rs  lib.rs  ver.rs
crates/pulith-core/src/env/: exec.rs  mod.rs
crates/pulith-core/src/reg/: mod.rs  sa.rs
crates/pulith-core/src/ui/: mod.rs  table.rs  tracker.rs
crates/pulith-core/src/utils/: client.rs  mod.rs  task_pool.rs  ver.rs
crates/pulith-core/src/utils/ui/: table.rs  tracker.rs
crates/pulith-fetch/: Cargo.toml  README.md
crates/pulith-fetch/benches/: memory_usage.rs  multi_source.rs  segment_bench.rs  stream_processing.rs  token_bucket.rs
crates/pulith-fetch/src/: cache.rs  codec.rs  config.rs  core.rs  data.rs  effects.rs  effects.rs.bak  error.rs  fetch.rs  lib.rs  net.rs  perf.rs  progress.rs  rate.rs  segment.rs
crates/pulith-fetch/src/cache/: file_cache.rs  http_cache.rs
crates/pulith-fetch/src/codec/: decompress.rs  signature.rs  verify.rs
crates/pulith-fetch/src/config/: fetch_options.rs  sources.rs
crates/pulith-fetch/src/core/: bandwidth.rs  mod.rs  retry.rs  segment.rs  validation.rs
crates/pulith-fetch/src/data/: extended_progress.rs  mod.rs  options.rs  progress.rs  sources.rs
crates/pulith-fetch/src/effects/: batch.rs  cache.rs  conditional.rs  fetcher.rs  http.rs  mod.rs  multi_source.rs  protocol.rs  resumable.rs  segmented.rs  throttled.rs
crates/pulith-fetch/src/fetch/: batch.rs  conditional.rs  fetcher.rs  multi_source.rs  resumable.rs  segmented.rs
crates/pulith-fetch/src/net/: http.rs  protocol.rs
crates/pulith-fetch/src/perf/: mod.rs
crates/pulith-fetch/src/progress/: extended_progress.rs  progress.rs
crates/pulith-fetch/src/rate/: backoff.rs  bandwidth.rs  throttled.rs
crates/pulith-fetch/src/segment/: segment.rs  validation.rs
crates/pulith-fetch/src/transform/: cache.rs  decompress.rs  mod.rs  signature.rs  verify.rs
crates/pulith-fetch/tests/: performance_integration.rs
crates/pulith-fs/: Cargo.toml  README.md
crates/pulith-fs/src/: align.rs  error.rs  lib.rs  permissions.rs  resource.rs  transaction.rs  workspace.rs
crates/pulith-fs/src/primitives/: atomic_write.rs  copy_dir.rs  hardlink.rs  mod.rs  replace_dir.rs  rw.rs  symlink.rs
crates/pulith-fs/src/workflow/: mod.rs  transaction.rs  workspace.rs
crates/pulith-fs/tests/: integration.rs
crates/pulith-install/: Cargo.toml  README.md
crates/pulith-install/benches/: copy_transition.rs  pipeline.rs
crates/pulith-install/src/: lib.rs
crates/pulith-install/tests/: workspace_pipeline.rs
crates/pulith-lock/: Cargo.toml  README.md
crates/pulith-lock/benches/: lock_diff.rs
crates/pulith-lock/src/: lib.rs
crates/pulith-platform/: Cargo.toml  README.md
crates/pulith-platform/src/: arch.rs  command.rs  dir.rs  env.rs  error.rs  lib.rs  os.rs  path.rs  platform.rs  shell.rs
crates/pulith-profile/: Cargo.toml
crates/pulith-profile/src/: alias.rs  lib.rs
crates/pulith-profile/src/profile/: mod.rs
crates/pulith-resource/: Cargo.toml  README.md
crates/pulith-resource/src/: lib.rs
crates/pulith-serde-backend/: Cargo.toml  README.md
crates/pulith-serde-backend/src/: lib.rs
crates/pulith-shim/: Cargo.toml
crates/pulith-shim-bin/pulith-shim/: Cargo.toml
crates/pulith-shim-bin/pulith-shim/src/: resolver.rs
crates/pulith-shim/src/: error.rs  lib.rs  resolver.rs
crates/pulith-source/: Cargo.toml  README.md
crates/pulith-source/src/: lib.rs
crates/pulith-state/: Cargo.toml  README.md
crates/pulith-state/benches/: ownership_report.rs  repair_plan.rs  state_growth.rs
crates/pulith-state/src/: lib.rs
crates/pulith-store/: Cargo.toml  README.md
crates/pulith-store/benches/: register.rs
crates/pulith-store/src/: lib.rs
crates/pulith-verify/: Cargo.toml  README.md
crates/pulith-verify/src/: error.rs  hasher.rs  lib.rs  reader.rs
crates/pulith-version/: Cargo.toml  README.md
crates/pulith-version/src/: calver.rs  lib.rs  partial.rs  semver.rs  version.rs
crates/pulith/src/: main.rs
crates/pulith/src/cli/: app.rs  ls.rs  mod.rs  parse.rs  setup.rs
crates/pulith/src/env/: mod.rs
crates/pulith/src/reg/: backend_reg.rs  tool_reg.rs
docs/: AGENT.md  ARCHITECTURE.md  descriptor.md  design.md  migration.md  profile.md  roadmap.md  template.md
examples/pulith-backend-example/: Cargo.toml  README.md
examples/runtime-manager/: Cargo.toml  README.md
examples/runtime-manager/src/: main.rs
src/: main.rs
(+99 files in other folders)
