[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.100"
home = "0.5.12"
once_cell = "1.21.3"
query-shell = "0.3.0"
regex = "1.12.2"
semver = { version = "1.0.27", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sysinfo = "0.37.2"
thiserror = "2.0.18"
