[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
blake3 = "1.8"
flate2 = "1.1.8"
hex = "0.4"
once_cell = "1.21.3"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0.18"
tempfile = "3"
url = { version = "2.5", features = ["serde"] }
