[workspace]
members = ["crates/*", "examples/*"]
resolver = "3"

[workspace.dependencies]
blake3 = "1.8"
criterion = { version = "0.8", features = ["html_reports", "async_tokio"] }
flate2 = "1.1.8"
hex = "0.4"
once_cell = "1.21.4"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.11"
tar = "0.4.45"
thiserror = "2.0.18"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tracing = "0.1"
xz2 = "0.1.7"
url = { version = "2.5", features = ["serde"] }
zip = "8.4.0"
zstd = "0.13.3"
