[package]
name = "pulith-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
pulith-core = { path = "../pulith-core" }
reqwest = { workspace = true }
clap = { workspace = true }
statum = { workspace = true }
serde = { workspace = true }
once_cell = { workspace = true }
which = { workspace = true }
thiserror = { workspace = true }
tabled = { workspace = true }
sled = { workspace = true }
postcard = { workspace = true }
hex = { workspace = true }
