[package]
name = "pulith-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tabled = {workspace = true}
reqwest = {workspace = true}
anyhow = { workspace = true }
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
once_cell = { workspace = true }
tokio = { workspace = true}
sha2 = { workspace = true }
regex = { workspace = true }
semver = { workspace = true }
indicatif = { workspace = true }
query-shell = { workspace = true }
sysinfo = { workspace = true }
home = { workspace = true }
