[package]
name = "pulith-fetch"
version = "0.2.0"
edition = "2024"
description = "HTTP downloading with streaming verification and atomic placement"

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
brotli = ["dep:brotli"]

[dependencies]
pulith-fs = { path = "../pulith-fs" }
pulith-verify = { path = "../pulith-verify" }

thiserror.workspace = true
hex.workspace = true
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"
flate2 = "1.1"
brotli = { version = "8.0", optional = true }
sha2 = "0.10"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.13.1", features = [
	"stream",
	"default-tls",
], optional = true }

[dev-dependencies]
tempfile.workspace = true
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio-test = "0.4"

[[bench]]
name = "token_bucket"
harness = false

[[bench]]
name = "stream_processing"
harness = false

[[bench]]
name = "memory_usage"
harness = false
