[package]
name = "pulith-fetch"
version = "0.2.0"
edition = "2024"
description = "HTTP downloading with streaming verification and atomic placement"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/fetch.md"
readme = "README.md"
keywords = ["fetch", "download", "http", "streaming"]
categories = ["network-programming", "filesystem"]

[features]
default = ["reqwest"]
reqwest = ["dep:reqwest"]
brotli = ["dep:brotli"]

[dependencies]
pulith-fs = { path = "../pulith-fs", version = "0.1.0" }
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }
pulith-source = { path = "../pulith-source", version = "0.1.0" }
pulith-verify = { path = "../pulith-verify", version = "0.1.0" }

thiserror.workspace = true
hex.workspace = true
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bytes = "1"
flate2.workspace = true
brotli = { version = "8.0", optional = true }
sha2.workspace = true
chrono = { version = "0.4.44", features = ["serde"] }
tempfile.workspace = true

reqwest = { version = "0.13.2", default-features = false, features = [
	"stream",
	"native-tls",
], optional = true }

[dev-dependencies]
async-trait = "0.1"
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }
criterion.workspace = true

[[bench]]
name = "token_bucket"
harness = false

[[bench]]
name = "stream_processing"
harness = false

[[bench]]
name = "memory_usage"
harness = false

[[bench]]
name = "multi_source"
harness = false
