[package]
name = "pulith-fs"
version = "0.1.0"
edition = "2024"
description = "Cross-platform atomic filesystem primitives"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/pulith-fs/README.md"
keywords = ["filesystem", "atomic", "cross-platform"]
categories = ["os::unix-apis", "os::windows-apis"]

[dependencies]
thiserror.workspace = true
memmap2 = "0.9"
uuid = { version = "1", features = ["v4"] }
junction = "1.4.1"
fs2 = "0.4"

[dev-dependencies]
tempfile.workspace = true
