[package]
name = "pulith-install"
version = "0.1.0"
edition = "2024"
description = "Composable installation workflow primitives for Pulith"

[dependencies]
pulith-archive = { path = "../pulith-archive" }
pulith-fetch = { path = "../pulith-fetch" }
pulith-fs = { path = "../pulith-fs" }
pulith-resource = { path = "../pulith-resource" }
pulith-shim = { path = "../pulith-shim-bin/pulith-shim" }
pulith-state = { path = "../pulith-state" }
pulith-store = { path = "../pulith-store" }

thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
pulith-source = { path = "../pulith-source" }
tokio = { version = "1", features = ["rt-multi-thread"] }
zip.workspace = true
