[package]
name = "pulith-install"
version = "0.1.0"
edition = "2024"
description = "Composable installation workflow primitives for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/install.md"
readme = "README.md"
keywords = ["install", "activation", "rollback", "workflow"]
categories = ["filesystem", "development-tools"]

[dependencies]
pulith-archive = { path = "../pulith-archive" }
pulith-fetch = { path = "../pulith-fetch" }
pulith-fs = { path = "../pulith-fs" }
pulith-resource = { path = "../pulith-resource" }
pulith-shim = { path = "../pulith-shim-bin/pulith-shim" }
pulith-state = { path = "../pulith-state" }
pulith-store = { path = "../pulith-store" }

thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
bytes = "1"
criterion.workspace = true
futures-util = "0.3"
pulith-source = { path = "../pulith-source" }
tokio = { version = "1", features = ["rt-multi-thread"] }
zip.workspace = true

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "copy_transition"
harness = false
