[package]
name = "pulith-install"
version = "0.1.0"
edition = "2024"
description = "Composable installation workflow primitives for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/install.md"
readme = "README.md"
keywords = ["install", "activation", "rollback", "workflow"]
categories = ["filesystem", "development-tools"]

[dependencies]
pulith-archive = { path = "../pulith-archive", version = "0.2.0" }
pulith-fetch = { path = "../pulith-fetch", version = "0.2.0" }
pulith-fs = { path = "../pulith-fs", version = "0.1.0" }
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }
pulith-shim = { path = "../pulith-shim", version = "0.1.0" }
pulith-state = { path = "../pulith-state", version = "0.1.0" }
pulith-store = { path = "../pulith-store", version = "0.1.0" }

thiserror.workspace = true
tempfile.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
bytes = "1"
criterion.workspace = true
futures-util = "0.3"
pulith-source = { path = "../pulith-source", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread"] }
zip.workspace = true

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "copy_transition"
harness = false
