[package]
name = "pulith-lock"
version = "0.1.0"
edition = "2024"
description = "Deterministic lock file model and lock diff for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
publish = false

[dependencies]
pulith-serde-backend = { path = "../pulith-serde-backend", version = "0.1.0" }
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "lock_diff"
harness = false
