[package]
name = "pulith-platform"
version = "0.1.0"
edition = "2024"
description = "Platform and shell/environment helpers for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/platform.md"
readme = "README.md"
keywords = ["platform", "shell", "environment", "os"]
categories = ["os::unix-apis", "os::windows-apis"]

[dependencies]
pulith-fs = { path = "../pulith-fs", version = "0.1.0" }

home = "0.5.12"
query-shell = "0.3"
once_cell.workspace = true
thiserror.workspace = true

