[package]
name = "pulith-profile"
version = "0.1.0"
edition = "2024"

[dependencies]
figment = { version = "0.10.19", features = ["toml"] }
tera = "1.20.0"
clap = { workspace = true }
toml = { workspace = true }
serde = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
