[package]
name = "pulith-resource"
version = "0.1.0"
edition = "2024"
description = "Composable resource description types for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/resource.md"
readme = "README.md"
keywords = ["resource", "locator", "version", "identity"]
categories = ["data-structures"]

[dependencies]
pulith-version = { path = "../pulith-version", version = "0.1.0" }
serde.workspace = true
thiserror.workspace = true
url.workspace = true
hex.workspace = true
