[package]
name = "pulith-serde-backend"
version = "0.1.0"
edition = "2024"
description = "Serialization backend contract and JSON baseline adapter for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
