[package]
name = "pulith-serde-backend"
version = "0.1.0"
edition = "2024"
description = "Serialization backend contract and JSON baseline adapter for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/serialization.md"
readme = "README.md"
keywords = ["serde", "codec", "serialization", "json"]
categories = ["encoding", "development-tools"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
