[package]
name = "pulith-source"
version = "0.1.0"
edition = "2024"
description = "Composable source abstractions and planning for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/source.md"
readme = "README.md"
keywords = ["source", "planning", "mirror", "adapter"]
categories = ["data-structures", "development-tools"]

[dependencies]
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }

serde.workspace = true
thiserror.workspace = true
