[package]
name = "pulith-state"
version = "0.1.0"
edition = "2024"
description = "Transaction-backed persistent state for Pulith resources"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/state.md"
readme = "README.md"
keywords = ["state", "lifecycle", "inspection", "retention"]
categories = ["filesystem", "data-structures"]

[dependencies]
pulith-fs = { path = "../pulith-fs" }
pulith-resource = { path = "../pulith-resource" }
pulith-store = { path = "../pulith-store" }

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "state_growth"
harness = false
