[package]
name = "pulith-state"
version = "0.1.0"
edition = "2024"
description = "Transaction-backed persistent state for Pulith resources"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/state.md"
readme = "README.md"
keywords = ["state", "lifecycle", "inspection", "retention"]
categories = ["filesystem", "data-structures"]

[dependencies]
pulith-fs = { path = "../pulith-fs", version = "0.1.0" }
pulith-lock = { path = "../pulith-lock", version = "0.1.0" }
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }
pulith-serde-backend = { path = "../pulith-serde-backend", version = "0.1.0" }
pulith-store = { path = "../pulith-store", version = "0.1.0" }

serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "state_growth"
harness = false

[[bench]]
name = "repair_plan"
harness = false

[[bench]]
name = "ownership_report"
harness = false
