[package]
name = "pulith-store"
version = "0.1.0"
edition = "2024"
description = "Composable local artifact storage for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/store.md"
readme = "README.md"
keywords = ["artifact", "store", "provenance", "metadata"]
categories = ["filesystem", "data-structures"]

[dependencies]
pulith-archive = { path = "../pulith-archive", version = "0.2.0" }
pulith-fetch = { path = "../pulith-fetch", version = "0.2.0" }
pulith-fs = { path = "../pulith-fs", version = "0.1.0" }
pulith-resource = { path = "../pulith-resource", version = "0.1.0" }
pulith-serde-backend = { path = "../pulith-serde-backend", version = "0.1.0" }

serde.workspace = true
thiserror.workspace = true
tempfile.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "register"
harness = false
