[package]
name = "pulith-verify"
version = "0.1.0"
edition = "2024"
description = "Content verification primitives for downloaded artifacts"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/verify.md"
keywords = ["hash", "checksum", "verification", "crypto"]
categories = ["cryptography"]

[dependencies]
thiserror.workspace = true
hex.workspace = true
digest = { version = "0.10", default-features = false }
sha2 = { version = "0.10", optional = true }
blake3 = { version = "1.8", optional = true }
sha3 = { version = "0.10", optional = true }

[dev-dependencies]
hex.workspace = true

[features]
default = ["sha256"]
sha256 = ["dep:sha2", "digest/std"]
blake3 = ["dep:blake3", "digest/std"]
sha3 = ["dep:sha3", "digest/std"]
