[package]
name = "pulith-version"
version = "0.1.0"
edition = "2024"
description = "Version parsing, matching, and selection policies for Pulith"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/version.md"
readme = "README.md"
keywords = ["version", "semver", "calver", "selection"]
categories = ["parser-implementations", "data-structures"]

[dependencies]
semver = { version = "1.0.28", features = ["serde"] }
regex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
proptest = "1.6"
