[package]
name = "pulith"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = {workspace = true}
home = { workspace = true }
anyhow = {workspace = true}
clap = { workspace = true }
clap_complete = { workspace = true }
once_cell = {workspace = true}
display_tree = { workspace = true }
pulith-core = { path = "../pulith-core" }
pulith-backend = { path = "../pulith-backend" }
