[package]
name = "pulith-backend-example"
version = "0.1.0"
edition = "2024"
description = "Thin backend example crate for Pulith's adapter-first architecture"
publish = false

[dependencies]
pulith-fetch = { path = "../../crates/pulith-fetch" }
pulith-install = { path = "../../crates/pulith-install" }
pulith-resource = { path = "../../crates/pulith-resource" }
pulith-source = { path = "../../crates/pulith-source" }
pulith-version = { path = "../../crates/pulith-version" }

thiserror.workspace = true

[dev-dependencies]
