[package]
name = "runtime-manager-example"
version = "0.1.0"
edition = "2024"
description = "Practical integration example for Pulith crates"
publish = false

[dependencies]
pulith-archive = { path = "../../crates/pulith-archive" }
pulith-backend-example = { path = "../../crates/pulith-backend-example" }
pulith-fetch = { path = "../../crates/pulith-fetch" }
pulith-install = { path = "../../crates/pulith-install" }
pulith-resource = { path = "../../crates/pulith-resource" }
pulith-source = { path = "../../crates/pulith-source" }
pulith-state = { path = "../../crates/pulith-state" }
pulith-store = { path = "../../crates/pulith-store" }

tokio.workspace = true
