[package]
name = "pulith-shim"
version = "0.1.0"
edition = "2024"
description = "Executable shim generation and management for Unix and Windows"
license = "Apache-2.0"
repository = "https://github.com/anomalyco/pulith"
documentation = "https://github.com/anomalyco/pulith/blob/main/docs/design/shim.md"
keywords = ["shim", "runtime", "activation", "launcher"]
categories = ["command-line-interface", "os::windows-apis", "os::unix-apis"]

[dependencies]
thiserror.workspace = true
